integrated query and hacked progressive reveal JS

--- a/views/condition/operation.html
+++ b/views/condition/operation.html
@@ -10,70 +10,57 @@
     <div class="grid-row">
         <div class="grid-3-3">
             <div class="header-panel">
-                <h2 class="header">Hernia</h2>
-                <div class="content-seperator"></div>
-                <h3 class="precis">A hernia looks like a lump under the skin. It can be different sizes.</h3>
+                <h2 class="header">Hernia operation</h2>
+<!--                 <div class="content-seperator"></div>
+                <h3 class="precis">A hernia looks like a lump under the skin. It can be different sizes.</h3> -->
             </div>
         </div>
     </div> <!-- end row -->
     
 <div class="grid-row">
-    <div class="grid-10-16">
+    <div class="grid-3-4">
 
-        <div class="step-guidance">
-            <h2 class="heading-xlarge">When it’s a hernia</h2>
-            <ul class="steps">
-                <li>The lump is in your groin, stomach or thigh.</li>
-                <li>The lump often goes away when you lay down, especially at first.</li>
-                <li>The lump often appears when you cough or strain.</li>
-                <li>You can push the lump back in.</li>
-                <li>You feel a heaviness in your groin.</li>
-            </ul>
-            <div class="call-to-action">
-                <h2 class="heading-large">If you think you have a hernia, speak to a GP.</h2>
-                <p><a href="#" class="button">Book a GP appointment</a></p>
-            </div> 
-        </div>
-
-        <div class="image-carousel">
-            <h2 class="heading-xlarge" id="02">What does a hernia look like?</h2>
-            <img src="/images/hernia/hernia-image-module.jpg" />
+        <div>
+            <p>This section focuses on Hernia in the groin.  For information about other hernias read <a href="http://www.nhs.uk/conditions/hernia/Pages/Introduction.aspx">hiatus hernia</a> or <a href="http://www.nhs.uk/Conditions/UmbilicalHernia/Pages/Whatisitpage.aspx">umbilical hernia</a></p>
+            <p>You’ll need an operation to fix a groin hernia.</p>  
+            <p>You may not need an operation straight away. It won’t get better without surgery, but it doesn’t always get worse. You can discuss with your doctor whether or not you need surgery.  They’ll consider:</p>
             <ul>
-                <li class="selected">Groin</li><!--
-                --><li ><a href="#">Upper thigh</a></li><!--
-                --><li><a href="#">Tummy</a></li><!--
-                --><li><a href="#">Testicle</a></li>
+                <li>the type of hernia you have - some are more prone to complications</li>
+                <li>if your hernia is causing problems, such as pain</li>
+                <li>your health - surgery may be a risk in some cases</li>
             </ul>
         </div>
 
         <div>
-            <p><a href="types_of_hernia_and_complications">Types of hernia and complications</a></p>
+            <h2 class="heading-xlarge" id="02">Hernia operation</h2>
+            <p>There are two types of hernia operation:</p>
+        <div>
+
+        <div>
+            <h2 class="heading-xlarge" id="02">Open surgery</h2>
+            <ol>
+                <li>You’ll be given medication so you don’t feel pain during the operation.  This will be either an injection in the spine to numb the area (local anaesthetic), or an injection into the vein to make you sleep during the operation (general anaesthetic).</li>
+                <li>The surgeon will make a cut (6-8cm long) over the hernia.  They will push the hernia back into your tummy and stitch a mesh over the weak spot the hernia came through. This strengthens it.</li>
+                <li>Your skin will be stitched back together with dissolvable stitches</li>
+            </ol>
         </div>
 
         <div>
-            <h2 class="heading-xlarge" id="02">What to do about Hernia</h2>
-            <p>Your GP will confirm if your lump is a hernia and discuss how it can be treated.</p>
-            <p>You’ll need to have an <a href="#">operation</a> to repair your hernia. You may not need one straight away - it depends on the type of hernia and if it’s causing you problems. Your hernia may get bigger if it’s not treated, although this could take months or even years.</p>
-            
+            <h2 class="heading-xlarge" id="02">Keyhole (laparoscopic) surgery</h2>
+            <ol>
+                <li>You’ll be given an injection to make you sleep during the operation (general anaesthetic).</li>
+                <li>The surgeon will make 3 small cuts in your tummy. Your tummy will be filled with gas to make space and a camera and 2 small tools are inserted into the cuts. Your surgeon can see what they’re doing through the camera. </li>
+                <li>Your surgeon will pull the hernia back into your tummy and stitch a mesh over the weak spot in the muscle. </li>
+                <li>The cuts in your skin will then be glued or stitched back together. </li>
+            </ol>
         </div>
 
-    </div>
-
-    <div class="grid-6-16">
-        <div class="callout urgent">
-            <h2 class="heading-xlarge headline">See a GP now or go to A&amp;E</h2>
-            <p>If you have a hernia and</p>
-            <ul>
-                <li>it feels hot</li>
-                <li>it's hard and tender</li>
-                <li>it’s suddenly painful</li>
-                <li>you have a fever</li>
-                <li>you have blood in your poo</li>
-            </ul>
-            <div class="content-seperator"></div>
-            <p>This could mean you have a <a href="#">strangulated hernia.</a></p>
+        <div>
+            <h3 class="heading-large" id="02">Types of keyhole surgery</h3>
+            <p>There are 2 types of keyhole surgery for hernia:</p>
+            <p>Transabdominal preperitoneal (TAPP) </p>
+            <p>Totally extraperitoneal (TEP)</p>
         </div>
-    </div>
 
 </div> <!-- end row -->
 
