--- a/views/_layouts/_layout-default.html
+++ b/views/_layouts/_layout-default.html
@@ -23,6 +23,8 @@
 
 {% include "_includes/footer-global.html" %}
 
+{% include "_includes/scripts.html" %}
+
 {% if GOOGLE_ANALYTICS_TRACKING_ID %}
   {% include "_includes/google-analytics.html" %}
 {% endif %}
