integrated basic progressive reveal. linked in hernia steps guide to main hernia page

--- a/assets/scss/modules/callout/_callout.scss
+++ b/assets/scss/modules/callout/_callout.scss
@@ -60,7 +60,9 @@
 /* Info callout variation */
 
 .callout.info {
-  background-color: rgba($yellow, 0.2);
+  background-color: rgba($nhs-grey-light, 0.2);
+  border-top: 2px solid $nhs-grey-light;
+  border-bottom: 2px solid $nhs-grey-light;
 }
 
 /* GP callout variation */
