--- a/views/condition/hernia.html
+++ b/views/condition/hernia.html
@@ -63,7 +63,8 @@
         <div>
             <h2 class="heading-xlarge" id="02">What to do about Hernia</h2>
             <p>Your GP will confirm if your lump is a hernia and discuss how it can be treated.</p>
-            <p>You’ll need to have an <a href="#">operation</a> to repair your hernia. You may not need one straight away - it depends on the type of hernia and if it’s causing you problems. Your hernia may get bigger if it’s not treated, although this could take months or even years.</p>
+            <p>You’ll need to have an <a href="operation">operation</a> to repair your hernia. You may not need one straight away - it depends on the type of hernia and if it’s causing you problems. Your hernia may get bigger if it’s not treated, although this could take months or even years.</p>
+            <p>If you need surgery, you should be able to have an operation for groin hernia within 18 weeks of your GP appointment. Read <a href="/hernia/guide-surgery">7 steps to hernia surgery</a> for more information.</p>
             
         </div>
 
