--- a/views/hernia/guide-surgery.html
+++ b/views/hernia/guide-surgery.html
@@ -8,6 +8,19 @@
 <div class="content">
 
   <div class="grid-row">
+      <div class="grid-3-3">
+          <ul class="breadcrumb">
+              <li><a href="#" class="button -bordered -small">Conditions</a></li>
+              <li><a href="#" class="button -bordered -small">Lumps & swellings</a></li>
+              <li><a href="/condition/hernia" class="button -bordered -small">hernia</a></li>
+              <li><a href="#" class="button -bordered -small">Guides</a></li>
+              <li class="selected">7 day Guides</li>
+
+          </ul>
+      </div>
+  </div>
+
+  <div class="grid-row">
 
     <div class="grid-1-3">
       <div class="header-panel">
