herni amends, operation amends

--- a/views/condition/operation.html
+++ b/views/condition/operation.html
@@ -1,6 +1,6 @@
 {% extends "_layouts/_layout-default.html" %}
 
-{% set pagetitle = "Hernia surgery - 7 steps to get you through surgery" %}
+{% set pagetitle = "Hernia operation" %}
 
 
 {% block content %}
@@ -82,19 +82,6 @@
                 </small>
             </div>
 
-        </div>
-
-        <div>
-            <h2 class="heading-xlarge" id="02">What type of hernia operation of hernia is better?</h2>
-            <p>Both keyhole and open surgery for hernias in the groin are safe and work well</p>
-        </div>
-
-        <div>
-            <h3 class="heading-large" id="02">Keyhole surgery</h3>
-        </div>
-
-        <div>
-            <h3 class="heading-large" id="02">Open surgery</h3>
         </div>
 
     </div>
