--- a/views/condition/types_of_hernia_and_complications.html
+++ b/views/condition/types_of_hernia_and_complications.html
@@ -1,11 +1,22 @@
 {% extends "_layouts/_layout-default.html" %}
 
-{% set pagetitle = "Hernia surgery - 7 steps to get you through surgery" %}
+{% set pagetitle = "Types of hernia and complications" %}
 
 
 {% block content %}
 
 <div class="content">
+
+    <div class="grid-row">
+        <div class="grid-3-3">
+            <ul class="breadcrumb">
+                <li><a href="#" class="button -bordered -small">Conditions</a></li>
+                <li><a href="#" class="button -bordered -small">Lumps & swellings</a></li>
+                <li><a href="hernia" class="button -bordered -small">hernia</a></li>
+                <li class="selected">Types</li>
+            </ul>
+        </div>
+    </div>
 
     <div class="grid-row">
         <div class="grid-16-16">
