--- a/views/condition/hernia.html
+++ b/views/condition/hernia.html
@@ -1,6 +1,6 @@
 {% extends "_layouts/_layout-default.html" %}
 
-{% set pagetitle = "Hernia surgery - 7 steps to get you through surgery" %}
+{% set pagetitle = "Hernia" %}
 
 
 {% block content %}
