--- a/views/condition/hernia.html
+++ b/views/condition/hernia.html
@@ -51,21 +51,22 @@
             <ul>
                 <li class="selected">Groin</li><!--
                 --><li ><a href="#">Upper thigh</a></li><!--
-                --><li><a href="#">Tummy</a></li><!--
+                --><li><a href="#">Tummy area</a></li><!--
                 --><li><a href="#">Testicle</a></li>
             </ul>
         </div>
 
         <div>
-            <p><a href="types_of_hernia_and_complications">Types of hernia and complications</a></p>
+            <p><a href="types_of_hernia_and_complications">Types of hernia</a></p>
         </div>
 
         <div>
             <h2 class="heading-xlarge" id="02">What to do about Hernia</h2>
             <p>Your GP will confirm if your lump is a hernia and discuss how it can be treated.</p>
             <p>You’ll need to have an <a href="operation">operation</a> to repair your hernia. You may not need one straight away - it depends on the type of hernia and if it’s causing you problems. Your hernia may get bigger if it’s not treated, although this could take months or even years.</p>
-            <p>If you need surgery, you should be able to have an operation for groin hernia within 18 weeks of your GP appointment. Read <a href="/hernia/guide-surgery">7 steps to hernia surgery</a> for more information.</p>
-            
+            <p>If you need surgery, you should be able to have an operation for groin hernia within 18 weeks of your GP appointment. Read <a href="/hernia/guide-surgery">steps to hernia surgery</a> for more information.</p>
+            <a href="types_of_hernia_and_complications">What is a hernia?</a>
+            <br /><br />
         </div>
 
     </div>
