--- a/views/condition/operation.html
+++ b/views/condition/operation.html
@@ -12,7 +12,7 @@
             <ul class="breadcrumb">
                 <li><a href="#" class="button -bordered -small">Conditions</a></li>
                 <li><a href="#" class="button -bordered -small">Lumps & swellings</a></li>
-                <li><a href="hernia" class="button -bordered -small">hernia</a></li>
+                <li><a href="hernia" class="button -bordered -small">Hernia</a></li>
                 <li class="selected">Hernia operation</li>
             </ul>
         </div>
@@ -49,7 +49,7 @@
         <div>
             <h2 class="heading-large" id="02">Open surgery</h2>
             <ol>
-                <li>You’ll be given medication so you don’t feel pain during the operation.  This will be either an injection in the spine to numb the area (local anaesthetic), or an injection into the vein to make you sleep during the operation (general anaesthetic).</li>
+                <li>You’ll be given an injection in the spine to numb the area (local anaesthetic), or an injection into the vein to make you sleep during the operation (general anaesthetic).</li>
                 <li>The surgeon will make a cut (6-8cm long) over the hernia.  They will push the hernia back into your tummy and stitch a mesh over the weak spot the hernia came through. This strengthens it.</li>
                 <li>Your skin will be stitched back together with dissolvable stitches</li>
             </ol>
