--- a/views/condition/types_of_hernia_and_complications.html
+++ b/views/condition/types_of_hernia_and_complications.html
@@ -1,6 +1,6 @@
 {% extends "_layouts/_layout-default.html" %}
 
-{% set pagetitle = "Types of hernia and complications" %}
+{% set pagetitle = "What is a hernia" %}
 
 
 {% block content %}
@@ -12,7 +12,7 @@
             <ul class="breadcrumb">
                 <li><a href="#" class="button -bordered -small">Conditions</a></li>
                 <li><a href="#" class="button -bordered -small">Lumps & swellings</a></li>
-                <li><a href="hernia" class="button -bordered -small">hernia</a></li>
+                <li><a href="hernia" class="button -bordered -small">Hernia</a></li>
                 <li class="selected">Types</li>
             </ul>
         </div>
@@ -22,7 +22,7 @@
         <div class="grid-16-16">
             <div class="header-panel -no-precis">
                 <a href="hernia" class="button -back">Back</a>
-                <h2 class="header">Types of hernia and complications</h2>
+                <h2 class="header">What is a hernia?</h2>
             </div>
         </div>
     </div> <!-- end row -->
@@ -73,7 +73,7 @@
             <h2 class="heading-xlarge headline">See a GP now or go to A&amp;E</h2>
             <p>If you have a hernia and</p>
             <ul>
-                <li>its painful</li>
+                <li>it's painful</li>
                 <li>it feels hot</li>
                 <li>it feels hard and tender</li>
                 <li>you have a fever</li>
