added progressive reveal CSS

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -48,6 +48,7 @@
 // Decorative elements
 @import "modules/display/_decorative-elements";
 @import "modules/display/_rows";
+@import "modules/display/_progressive-reveal";
 
 //step guidance
 @import "modules/step-guidance/step-guidance";
