--- a/views/condition/operation.html
+++ b/views/condition/operation.html
@@ -43,6 +43,11 @@
 
         <div>
             <h2 class="heading-xlarge" id="02">Hernia operation</h2>
+            
+            <div class="video-module">
+                <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0"width="640.8" height="360" type="text/html" src="https://www.youtube.com/embed/LfwymP91S7A?autoplay=0&fs=0&iv_load_policy=3&showinfo=0&rel=0&cc_load_policy=0&start=0&end=0&origin=https://youtubeembedcode.com"></iframe>
+            </div>
+            
             <p>There are two types of hernia operation:</p>
         <div>
 
@@ -68,18 +73,17 @@
         <div>
             <h3 class="heading-large" id="02">Types of keyhole surgery</h3>
             <p>There are 2 types of keyhole surgery for hernia:</p>
-
-            <div><p><a href="#reveal-tapp" class="help-link"  onclick="$('#reveal-tapp').toggle();return false;">Transabdominal preperitoneal (TAPP) </a></p>
-              <small class="hidden-help" id="reveal-tapp">
-                <div class="callout info"><p>Transabdominal preperitoneal (TAPP) - instruments are inserted through the lining of your tummy into the space around your organs (the peritoneum). </p></div>
-              </small>
+            <div class="progressive-reveal">
+                <details>
+                  <summary>Transabdominal preperitoneal (TAPP)</summary>
+                  <div class="callout info"><p><span class="bold">Transabdominal preperitoneal (TAPP)</span> - instruments are inserted through the lining of your tummy into the space around your organs (the peritoneum). </p></div>
+                </details>
             </div>
-    
-            <div>
-                <p><a href="#reveal-tep" class="help-link"  onclick="$('#reveal-tep').toggle();return false;">Totally extraperitoneal (TEP) </a></p>
-                <small class="hidden-help" id="reveal-tep">
-                  <div class="callout info"><p>Totally extraperitoneal (TEP) - a newer type of surgery.  The hernia is repaired without going through the lining of your organs. </p></div>
-                </small>
+            <div class="progressive-reveal">
+                <details>
+                  <summary>Totally extraperitoneal (TEP) </summary>
+                  <div class="callout info"><p><span class="bold">Totally extraperitoneal (TEP)</span> - a newer type of surgery.  The hernia is repaired without going through the lining of your organs. </p></div>
+                </details>
             </div>
 
         </div>
