--- a/views/condition/hernia.html
+++ b/views/condition/hernia.html
@@ -40,8 +40,7 @@
                 <li>You feel a heaviness in your groin.</li>
             </ul>
             <div class="call-to-action">
-                <h2 class="heading-large">If you think you have a hernia, speak to a GP.</h2>
-                <p><a href="#" class="button">Book a GP appointment</a></p>
+                <h2 class="heading-large">If you think you have a hernia, speak to a GP</h2>
             </div> 
         </div>
 
@@ -55,18 +54,23 @@
                 --><li><a href="#">Testicle</a></li>
             </ul>
         </div>
-
+        
         <div>
-            <p><a href="types_of_hernia_and_complications">Types of hernia</a></p>
+            <p><a href="types_of_hernia_and_complications">Different types of hernia and causes</a></p>
         </div>
 
-        <div>
-            <h2 class="heading-xlarge" id="02">What to do about Hernia</h2>
+        <!--<div>
+            <h2 class="heading-xlarge" id="02">What to do about a hernia</h2>
+            <p>If you think you have a hernia, speak to a GP.</p>
             <p>Your GP will confirm if your lump is a hernia and discuss how it can be treated.</p>
-            <p>You’ll need to have an <a href="operation">operation</a> to repair your hernia. You may not need one straight away - it depends on the type of hernia and if it’s causing you problems. Your hernia may get bigger if it’s not treated, although this could take months or even years.</p>
-            <p>If you need surgery, you should be able to have an operation for groin hernia within 18 weeks of your GP appointment. Read <a href="/hernia/guide-surgery">steps to hernia surgery</a> for more information.</p>
-            <a href="types_of_hernia_and_complications">What is a hernia?</a>
-            <br /><br />
+        </div>-->
+        
+        <div>
+            <h2 class="heading-xlarge" id="03">Hernia operation</h2>
+            <p>You’ll need an <a href="operation">operation</a> to repair your hernia. You may not need one straight away - it depends on the the type of hernia and if it’s causing you problems.</p>
+            <p>You should be able to have an operation for groin hernia within 18 weeks of your GP appointment.</p> 
+            <p><a href="/hernia/guide-surgery">The steps you need to go through to get to hernia surgery</a></p>
+            <!--<p><a href="/hernia/guide-surgery">Step by step guide to hernia surgery</a></p>-->
         </div>
 
     </div>
@@ -83,7 +87,8 @@
                 <li>you have blood in your poo</li>
             </ul>
             <div class="content-seperator"></div>
-            <p>This could mean you have a <a href="#">strangulated hernia.</a></p>
+            <p><a href="#">Strangulated hernia</a></p>
+            <p>If the muscle tightens around a hernia it can cut off the blood supply.  This is a strangulated hernia. You’ll need emergency surgery to treat it.</p>
         </div>
     </div>
 
