--- a/views/condition/operation.html
+++ b/views/condition/operation.html
@@ -29,20 +29,20 @@
     
 <div class="grid-row">
     <div class="grid-3-4">
-
+        
         <div>
-            <p>This section focuses on Hernia in the groin.  For information about other hernias read <a href="http://www.nhs.uk/conditions/hernia/Pages/Introduction.aspx">hiatus hernia</a> or <a href="http://www.nhs.uk/Conditions/UmbilicalHernia/Pages/Whatisitpage.aspx">umbilical hernia</a></p>
-            <p>You’ll need an operation to fix a groin hernia.</p>  
+            <p>You’ll need an operation to fix a hernia.</p>  
             <p>You may not need an operation straight away. It won’t get better without surgery, but it doesn’t always get worse. You can discuss with your doctor whether or not you need surgery.  They’ll consider:</p>
             <ul>
                 <li>the type of hernia you have - some are more prone to complications</li>
                 <li>if your hernia is causing problems, such as pain</li>
                 <li>your health - surgery may be a risk in some cases</li>
             </ul>
+            <p class="callout info">This section focuses on hernia in the groin.  For information about other hernias read <a href="http://www.nhs.uk/conditions/hernia/Pages/Introduction.aspx">hiatus hernia</a> or <a href="http://www.nhs.uk/Conditions/UmbilicalHernia/Pages/Whatisitpage.aspx">umbilical hernia</a></p>
         </div>
 
         <div>
-            <h2 class="heading-xlarge" id="02">Hernia operation</h2>
+            <h2 class="heading-xlarge" id="02">Groin hernia operation</h2>
             
             <div class="video-module">
                 <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0"width="640.8" height="360" type="text/html" src="https://www.youtube.com/embed/LfwymP91S7A?autoplay=0&fs=0&iv_load_policy=3&showinfo=0&rel=0&cc_load_policy=0&start=0&end=0&origin=https://youtubeembedcode.com"></iframe>
@@ -76,13 +76,13 @@
             <div class="progressive-reveal">
                 <details>
                   <summary>Transabdominal preperitoneal (TAPP)</summary>
-                  <div class="callout info"><p><span class="bold">Transabdominal preperitoneal (TAPP)</span> - instruments are inserted through the lining of your tummy into the space around your organs (the peritoneum). </p></div>
+                  <div><p class="callout info"><span class="bold">Transabdominal preperitoneal (TAPP)</span> - instruments are inserted through the lining of your tummy into the space around your organs (the peritoneum). </p></div>
                 </details>
             </div>
             <div class="progressive-reveal">
                 <details>
                   <summary>Totally extraperitoneal (TEP) </summary>
-                  <div class="callout info"><p><span class="bold">Totally extraperitoneal (TEP)</span> - a newer type of surgery.  The hernia is repaired without going through the lining of your organs. </p></div>
+                  <div><p class="callout info"><span class="bold">Totally extraperitoneal (TEP)</span> - a newer type of surgery.  The hernia is repaired without going through the lining of your organs. </p></div>
                 </details>
             </div>
 
