add progressive reveal to aside

--- a/views/condition/hernia.html
+++ b/views/condition/hernia.html
@@ -87,9 +87,11 @@
                 <li>you have blood in your poo</li>
             </ul>
             <div class="content-seperator"></div>
-            <p><a href="#">Strangulated hernia</a></p>
-            <p>If the muscle tightens around a hernia it can cut off the blood supply.  This is a strangulated hernia. You’ll need emergency surgery to treat it.</p>
-        </div>
+            <details>
+              <summary>Strangulated hernia</summary>
+              <div><p>If the muscle tightens around a hernia it can cut off the blood supply.  This is a strangulated hernia. You’ll need emergency surgery to treat it.</p></div>
+            </details>
+    </div>
     </div>
 
 </div> <!-- end row -->
