--- a/views/condition/hernia.html
+++ b/views/condition/hernia.html
@@ -66,10 +66,11 @@
         </div>-->
         
         <div>
-            <h2 class="heading-xlarge" id="03">Hernia operation</h2>
-            <p>You’ll need an <a href="operation">operation</a> to repair your hernia. You may not need one straight away - it depends on the the type of hernia and if it’s causing you problems.</p>
-            <p>You should be able to have an operation for groin hernia within 18 weeks of your GP appointment.</p> 
-            <p><a href="/hernia/guide-surgery">The steps you need to go through to get to hernia surgery</a></p>
+            <h2 class="heading-xlarge" id="03">Hernia treatment</h2>
+            <p>Your GP will confirm if your lump is a hernia and discuss how it can be treated.</p>
+            <p>You’ll need an operation to repair your hernia. You may not need one straight away - it depends on the the type of hernia and if it’s causing you problems.</p>
+            <p>You should be able to have an <a href="operation">operation for groin hernia</a> within 18 weeks of your GP appointment.</p> 
+            <p class="callout info"><a href="/hernia/guide-surgery">The steps you need to go through to get to hernia surgery</a></p>
             <!--<p><a href="/hernia/guide-surgery">Step by step guide to hernia surgery</a></p>-->
         </div>
 
@@ -87,6 +88,7 @@
                 <li>you have blood in your poo</li>
             </ul>
             <div class="content-seperator"></div>
+            <p>This could mean you have a</p>
             <details>
               <summary>Strangulated hernia</summary>
               <div><p>If the muscle tightens around a hernia it can cut off the blood supply.  This is a strangulated hernia. You’ll need emergency surgery to treat it.</p></div>
