--- a/views/hernia/02-seeing-the-surgeon.html
+++ b/views/hernia/02-seeing-the-surgeon.html
@@ -18,10 +18,12 @@
     </div>
 
     <div class="grid-2-3">
+        
+        <div class="header-panel-align">
 
       <div class="content-seperator -grey" id="01"></div>
       <p>The surgeon will talk you through the treatments that could help you, and you can decide the best treatment together.  You might decide it’s not surgery.</p>
-      <p>You can choose which hospital you want to go to. Once booked, you’ll get a confirmation in the post.</p>
+      <!--<p>You can choose which hospital you want to go to. Once booked, you’ll get a confirmation in the post.</p>-->
       <h3>Questions you might want to ask:</h3>
       <ul>
         <li>What are the different types of treatment, including non-surgical options?</li>
@@ -46,6 +48,8 @@
       <p>Your surgeon may be able to book you the date for your operation.</p>
       <p>This appointment usually lasts 15-20 mins.</p>
     </div>
+        
+      </div>
 
   </div> <!-- end row -->
 
