--- a/views/hernia/guide-surgery.html
+++ b/views/hernia/guide-surgery.html
@@ -39,11 +39,13 @@
     </div>
 
     <div class="grid-2-3">
+        
+    <div class="header-panel-align">
 
       <h2 class="heading-xlarge" id="01">1. Booking a hospital appointment with the surgeon</h2>
       <p>Your GP might book your first appointment with the surgeon for you. If they don’t, you’ll get a letter with a reference number to book online or over the phone.</p>
       <p>You can choose which hospital you want to go to. Once booked, you’ll get a confirmation in the post.</p>
-      <p><a href="#" class="button">Book a GP appointment</a></p>
+      <!--<p><a href="#" class="button">Book a GP appointment</a></p>-->
 
       <div class="header-prefix">
         <span>Approx 6 weeks</span>
@@ -96,7 +98,9 @@
       <p>You’ll need someone to help you home by car or taxi and stay with you for at least 24 hours. </p>
       <p><a href="07-help-with-recovery">Going home and recovery</a></p>
 
-    </div>
+        </div>
+        
+      </div>
 
   </div> <!-- end row -->
 
