--- a/views/guide/hernia/help-with-recovery.html
+++ b/views/guide/hernia/help-with-recovery.html
@@ -2,6 +2,14 @@
 
 {% set pagetitle = "Seeing the surgeon" %}
 
+{% block breadcrumb %}
+    <li><a href="#" class="button -bordered -small">Conditions</a></li>
+    <li><a href="#" class="button -bordered -small">Lumps & swellings</a></li>
+    <li><a href="/condition/hernia/" class="button -bordered -small">Hernia</a></li>
+    <li><a href="/guide/hernia/" class="button -bordered -small">Hernia surgery</a></li>
+    <li class="selected">Hernia surgery</li>
+{% endblock %}
+
 {% block content %}
 
 <div class="content">
