--- a/views/guide/hernia/index.html
+++ b/views/guide/hernia/index.html
@@ -1,16 +1,12 @@
 {% extends "_layouts/_layout-guide.html" %}
 
-{% set pagetitle = "Hernia surgery - 7 steps to get you through surgery" %}
-
-{% set title = "Hernia surgery" %}
-
+{% set pagetitle = "Hernia surgery" %}
 
 {% block breadcrumb %}
     <li><a href="#" class="button -bordered -small">Conditions</a></li>
     <li><a href="#" class="button -bordered -small">Lumps & swellings</a></li>
-    <li><a href="/condition/hernia" class="button -bordered -small">hernia</a></li>
-    <li><a href="#" class="button -bordered -small">Guides</a></li>
-    <li class="selected">7 day Guides</li>
+    <li><a href="/condition/hernia" class="button -bordered -small">Hernia</a></li>
+    <li class="selected">Hernia surgery</li>
 {% endblock %}
     
 {% block header %}
@@ -27,6 +23,7 @@
 {% endblock %}
     
 {% block content %}
+
     <h2 class="heading-xlarge" id="01">1. Booking a hospital appointment with the surgeon</h2>
     <p>Your GP might book your first appointment with the surgeon for you. If they don’t, you’ll get a letter with a reference number to book online or over the phone.</p>
     <p>You can choose which hospital you want to go to. Once booked, you’ll get a confirmation in the post.</p>
@@ -39,7 +36,7 @@
 
     <h2 class="heading-xlarge" id="02">2. Seeing a surgeon</h2>
     <p>The surgeon will explain what treatment options you have, and the benefits and risks of surgery. You can ask them any questions. This is the time when you decide if you want to go ahead with the operation.</p>
-    <p><a href="02-seeing-the-surgeon">Seeing the surgeon</a></p>
+    <p><a href="/guide/hernia/seeing-the-surgeon">Seeing the surgeon</a></p>
 
     <div class="header-prefix">
         <span>Approx 2 weeks</span>
@@ -56,7 +53,7 @@
     <h2 class="heading-xlarge" id="04">4. Checking your are fit for surgery</h2>
     <p>If you’re having a general anaesthetic, you’ll have an appointment with a nurse at the hospital to make sure you’re healthy enough for surgery. This is called a pre-operative assessment or pre-op.</p>
     <p>If you’re not healthy enough, the operation may be postponed.</p>
-    <p><a href="04-preparing-for-your-pre-operative-assessment-appointment">Preparing for your pre-operative assessment appointment</a></p>
+    <p><a href="/guide/hernia/preparing-for-your-pre-op">Preparing for your pre-operative assessment appointment</a></p>
 
     <div class="header-prefix">
         <span>Approx 2 weeks</span>
@@ -79,7 +76,7 @@
     
     <h2 class="heading-xlarge">6. Day of your surgery</h2>
     <p>When you arrive at the hospital go to the reception desk at your ward. Bring the letter with the confirmation of your surgery date with you.</p>
-    <p><a href="06-the-day-of-your-surgery">The day of your surgery</a></p>
+    <p><a href="/guide/hernia/the-day-of-your-surgery">The day of your surgery</a></p>
 
     <div class="content-seperator -grey" id="07"></div>
 
