--- a/views/index.html
+++ b/views/index.html
@@ -17,8 +17,8 @@
     <h3>V3.0</h3>
     <ul>
       <li><a href="/google/index">User journey: Google</a></li>
-      <li><a href="/condition/hernia">Condition: hernia</a></li>
-      <li><a href="/hernia/guide-surgery">V3.0 - Day surgery guide hernia </a></li>
+      <li><a href="/condition/hernia/">Hernia</a></li>
+      <li><a href="/guide/hernia/">Hernia: Step by step surgery guide</a></li>
     </ul>
 
   </div>
