--- a/views/_layouts/_layout-guide.html
+++ b/views/_layouts/_layout-guide.html
@@ -1,20 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-  <title>
-    {% if pagetitle %}{{ pagetitle }} | {% endif %}NHS.UK
-  </title>
-
-  <link type="text/css" rel="stylesheet" href="//fast.fonts.net/cssapi/50c9c92a-7fe0-4c8b-bd64-c7d3d2fafc87.css"/>
-  <link href="/css/main.css" media="screen" rel="stylesheet" type="text/css" />
-
-</head>
-<body>
-
-{% include "_includes/header-global.html" %}
+{% include "_includes/head.html" %}
 
 <main>
 
@@ -32,8 +16,10 @@
             
             <div class="grid-1-3">
                 <div class="header-panel">
-                    <!-- back button to go here -->
-                    <h2 class="header">{{title}}</h2>
+                    {% if backbutton %}
+                    <p><a href="{{backbutton}}" class="button -back">Back</a></p>
+                    {% endif %}
+                    <h2 class="header">{{pagetitle}}</h2>
                     {% block header %}{% endblock %}
                 </div>
             </div>
@@ -50,17 +36,4 @@
     
 </main>
 
-{% include "_includes/footer-global.html" %}
-
-{% include "_includes/scripts.html" %}
-
-{% if GOOGLE_ANALYTICS_TRACKING_ID %}
-  {% include "_includes/google-analytics.html" %}
-{% endif %}
-
-{% if MOUSE_STATS_ACCOUNT_ID %}
-  {% include "_includes/mouse-stats-analytics.html" %}
-{% endif %}
-
-</body>
-</html>
+    {% include "_includes/footer.html" %}
