--- a/views/guide/hernia/seeing-the-surgeon.html
+++ b/views/guide/hernia/seeing-the-surgeon.html
@@ -1,29 +1,20 @@
-{% extends "_layouts/_layout-default.html" %}
+{% extends "_layouts/_layout-guide.html" %}
 
 {% set pagetitle = "Seeing the surgeon" %}
+{% set backbutton = "surgery-guide" %}
+
+{% block header %}
+        <div class="content-seperator"></div>
+        <p>Your first appointment will be with a surgeon. You can bring someone with you.</p>
+{% endblock %}
 
 {% block content %}
 
-<div class="content">
-
-  <div class="grid-row">
-
-    <div class="grid-1-3">
-      <div class="header-panel">
-        <p><a href="guide-surgery" class="button -back">Back</a></p>
-        <h2 class="header">Seeing the surgeon</h2>
-        <div class="content-seperator"></div>
-        <p>Your first appointment will be with a surgeon. You can bring someone with you.</p>
-      </div>
-    </div>
-
-    <div class="grid-2-3">
-        
-        <div class="header-panel-align">
-
       <div class="content-seperator -grey" id="01"></div>
+
       <p>The surgeon will talk you through the treatments that could help you, and you can decide the best treatment together.  You might decide it’s not surgery.</p>
       <!--<p>You can choose which hospital you want to go to. Once booked, you’ll get a confirmation in the post.</p>-->
+
       <h3>Questions you might want to ask:</h3>
       <ul>
         <li>What are the different types of treatment, including non-surgical options?</li>
@@ -34,7 +25,6 @@
       </ul>
 
       <h3>Other practical questions you may want to ask:</h3>
-
       <ul>
         <li>How long is the waiting list for this operation?</li>
         <li>How long will I stay in hospital?</li>
@@ -47,12 +37,5 @@
       <p>The Royal College of Surgeons of England (RCS) website have answers to more questions about surgery.</p>
       <p>Your surgeon may be able to book you the date for your operation.</p>
       <p>This appointment usually lasts 15-20 mins.</p>
-    </div>
-        
-      </div>
-
-  </div> <!-- end row -->
-
-</div> <!-- content -->
 
 {% endblock %}
